tests/neg-macros/i7013.scala
import quoted._

def foo()(using QuoteContext) = {
  class C
  '[C] // error
}
